[package]
name = "file-searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
walkdir = "2"
scan_dir = "0.3.3"
regex = "1.10.4"
anyhow = "1.0.86"